--- a/user_group.yml
+++ b/user_group.yml
@@ -7,8 +7,8 @@
       group:
         name: "{{ item }}"
       loop:
-        - rumi
-        - kala
+        - john
+        - doe
 
     - name: Create User
       user:
